fixing white space on mobile view

--- a/public/main.css
+++ b/public/main.css
@@ -2,7 +2,7 @@
 html.landing-page, html.main-page {
 	border: 2px solid blue;
 	width: auto;
-	height: 100%;
+	height: 150%;
 	font-family: 'Lato', sans-serif;
 	color: #0a0c0f;
 	font-size: 1rem;
@@ -138,7 +138,7 @@ p {
 	width: 80%;
 	min-height: 60vh;
 	margin: 0 auto;
-	margin-top: 75px;
+	margin-top: 50px;
 	padding-bottom: 20px;
 	background: linear-gradient(white, rgba(255, 255, 255, 0.5) 90%);
 	background-size: cover;
